# XP-Paused

./: README.md  pyproject.toml
xp_paused/: __main__.py  console.py  core.py  macos_notification.py  notify_send_installed_check.py  xp_paused.py
