[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XP-Paused"
version = "1.0"

dependencies = ["requests", "beautifulsoup4", "windows-toasts", "rich"]


[project.scripts]
xp-paused = "xp_paused.core:stalk_servers"

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true
