[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XP-Paused"
version = "1.0"
requires-python = ">= 3.12"

dependencies = ["requests", "beautifulsoup4", "windows-toasts", "rich"]

classifiers = ["Programming Language :: Python :: 3.12"]


[project.scripts]
xp-paused = "xp_paused.core:stalk_servers"
