[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "XP-Paused"
version = "1.0"
requires-python = ">= 3.12"

dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "windows-toasts==1.1.0; os_name == 'nt'",
    "rich==13.7.1",
]

classifiers = ["Programming Language :: Python :: 3.12"]


[project.scripts]
xp-paused = "xp_paused.core:stalk_servers"
